test for hibernate validator

--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/resourceBundles/messages.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/resourceBundles/messages.properties
@@ -8,4 +8,8 @@ Validation.common.Field.InvalidRange.String=should be between [{min} - {max}] ch
 Validation.common.Field.InvalidEmail=[${validatedValue}] is invalid email format.
 Validation.common.Field.ChooseOne=Please select atleast one
 Validation.common.Field.Specify=Please specify
-Validation.common.Field.MismatchPasswords=Password and Confirm password do not match.
+
+
+## UserBean
+Validation.UserBean.Field.MismatchPasswords=Password and Confirm password do not match.
+Validation.UserBean.Field.UniqueEmail=Email address[${validatedValue}] has already taken.Choose another.
