add more validation methods

--- a/v1.0.0/03_Sources/mywebsite-backend/src/main/resources/resourceBundles/messages.properties
+++ b/v1.0.0/03_Sources/mywebsite-backend/src/main/resources/resourceBundles/messages.properties
@@ -10,6 +10,7 @@ Validation.common.Field.InvalidEmail=[{1}] is invalid email format.
 Validation.common.Field.ChooseOne=Please select atleast one
 Validation.common.Field.Specify=Please specify {0}
 Validation.common.Field.InvalidNumber={0} should only Numbers.
+Validation.common.Field.DoNotMatch = {0} and {1} do not match.
 
 
 ## UserBean
